--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -155,6 +155,10 @@ hr {
 	width: 16px;
 }
 
+article {
+	margin: 50px 0;
+}
+
 .slideshow {
 	margin-left: 24px;
 	margin-top: 40px;
@@ -191,17 +195,8 @@ hr {
 
 footer {
 	background-color: #353535;
-	border-top: 1px solid #CCC;
 	color: #FFF;
-	padding-top: 20px;
-	width: 100%;
-	.inner {
-		margin: 0 auto;
-		max-width: 1024px;
-	}
-	.inner-container > *:first-child {
-		width: 60%;
-	}
+	padding: 50px 0;
 }
 
 .stats {
@@ -240,12 +235,22 @@ footer {
 	}
 }
 
+.title {
+	text-align: center;
+}
+
 h1 {
 	color: #FFF;
 	font-size: 40px;
 	font-weight: 700;
 	line-height: 50px;
 	margin: 10px 0 20px;
+}
+h2 {
+  border-top: 1px solid #666;
+  display: inline-block;
+  font-style: italic;
+  padding: 20px 50px 0;
 }
 h3 {
 	font-size: 18px;
@@ -278,12 +283,12 @@ label {
 	color: #FFF;
 	text-transform: uppercase;
 }
-hr {
-	border: 1px solid #D8D8D8;
+.placeholder {
+	background-color: #CCC;
+	height: 300px;
+	margin: 20px 0;
 }
-img {
-	margin-bottom: 20px;
-}
+
 
 @media only screen and (max-width: 600px) {
   #map {
