--- a/css/styles.css
+++ b/css/styles.css
@@ -132,6 +132,7 @@ hr {
   -webkit-overflow-scrolling: touch; }
 
 #map {
+  background-color: #000;
   position: absolute;
   top: 0;
   bottom: 0;
