--- a/css/styles.css
+++ b/css/styles.css
@@ -63,21 +63,7 @@ body {
   top: 0;
   width: 100%; }
 
-.arrow {
-  position: absolute;
-  bottom: 10px;
-  left: 50%;
-  transform: translateX(-50%); }
-
-.arrow img {
-  margin: 0;
-  width: 25px; }
-
 .hero {
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
   height: 100vh;
   min-height: 590px;
   overflow-y: scroll;
@@ -91,12 +77,13 @@ body {
     transform: translate(-50%, -50%);
     width: 45%; }
   .hero .header {
+    border-bottom: 1px solid #CCC;
     margin-bottom: 50px;
-    text-align: left; }
-    .hero .header p {
-      color: #FFF;
-      font-size: 16px;
-      line-height: 23px; }
+    text-align: center; }
+  .hero p {
+    color: #FFF;
+    font-size: 16px;
+    line-height: 23px; }
 
 .ticker {
   background-color: rgba(0, 0, 0, 0.8);
@@ -150,7 +137,7 @@ hr {
   z-index: 90; }
 
 .main {
-  padding-top: 30px;
+  padding-top: 150px;
   display: flex;
   flex-flow: column; }
   .main section {
@@ -179,10 +166,12 @@ hr {
 
 article {
   margin: 50px 0; }
+  article img {
+    width: 100%; }
 
 .slideshow {
-  margin-left: 24px;
-  margin-top: 40px; }
+  margin: 40px auto 0;
+  width: 60%; }
   .slideshow .slick-dots {
     bottom: -15px; }
     .slideshow .slick-dots li {
@@ -211,23 +200,21 @@ article {
 footer {
   background-color: #353535;
   color: #FFF;
-  padding: 20px 0 0; }
-  footer .grid-container > div {
-    padding: 0 20px; }
+  padding: 30px 0 0; }
 
 .stats {
+  display: flex;
   list-style-type: none;
-  padding: 0;
-  text-align: right; }
+  padding: 0; }
   .stats li {
-    padding-bottom: 20px; }
+    padding-right: 40px; }
   .stats span {
     font-size: 30px;
     font-weight: bold; }
 
 .logos {
   background-color: #252525;
-  margin-top: 20px;
+  margin-top: 30px;
   padding: 18px 20px 9px; }
   .logos img {
     margin-left: 40px;
@@ -241,7 +228,7 @@ footer {
 
 h1 {
   color: #FFF;
-  font-size: 40px;
+  font-size: 38px;
   font-weight: 700;
   line-height: 50px;
   margin: 10px 0 20px; }
@@ -285,7 +272,7 @@ label {
 
 video {
   height: auto;
-  margin: 20px 0;
+  margin: 20px 0 0;
   width: 100%; }
 
 @media only screen and (max-width: 767px) {
@@ -301,8 +288,6 @@ video {
   img.full-width {
     height: auto;
     width: 100%; }
-  .stats {
-    text-align: left; }
   .logos .grid-container > div {
     padding: 0;
     text-align: center; }
