--- a/css/styles.css
+++ b/css/styles.css
@@ -171,7 +171,7 @@ article {
 
 .slideshow {
   margin: 40px auto 0;
-  width: 60%; }
+  width: 75%; }
   .slideshow .slick-dots {
     bottom: -15px; }
     .slideshow .slick-dots li {
@@ -237,7 +237,9 @@ h2 {
   border-top: 1px solid #666;
   display: inline-block;
   font-style: italic;
-  padding: 20px 50px 0; }
+  line-height: 26px;
+  padding: 20px 50px 0;
+  margin-top: 50px; }
 
 h3 {
   font-size: 18px;
@@ -276,6 +278,8 @@ video {
   width: 100%; }
 
 @media only screen and (max-width: 767px) {
+  h2 {
+    padding: 20px 0 0; }
   .hero .container {
     width: 85%; }
   .main section {
@@ -288,6 +292,17 @@ video {
   img.full-width {
     height: auto;
     width: 100%; }
+  video + p.small {
+    padding-left: 20px; }
+  .slideshow {
+    width: 100%; }
+    .slideshow .slide-caption {
+      padding-left: 20px; }
+    .slideshow .slick-dots {
+      bottom: -20px; }
+  footer .stats,
+  footer p.small {
+    padding: 0 20px; }
   .logos .grid-container > div {
     padding: 0;
     text-align: center; }
