--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -144,6 +144,7 @@ hr {
 article {
 	margin: 50px 0;
 	img {
+		margin-top: 20px;
 		width: 100%;
 	}
 }
@@ -208,6 +209,7 @@ footer {
 	img {
 		margin-left: 40px;
 		margin-bottom: 0;
+		vertical-align: top;
 		width: auto;
 	}
 	.grid-container > div {
@@ -221,7 +223,7 @@ footer {
 
 h1 {
 	color: #FFF;
-	font-size: 38px;
+	font-size: 31px;
 	font-weight: 700;
 	line-height: 50px;
 	margin: 10px 0 20px;
@@ -235,12 +237,12 @@ h2 {
   margin-top: 50px;
 }
 h3 {
-	font-size: 18px;
+	font-size: 22px;
 	font-weight: 700;
-	line-height: 21px;
+	line-height: 26px;
 }
 h4 {
-	font-size: 15px;
+	font-size: 18px;
 	line-height: 20px;
 	margin-top: 4px;
 	margin-bottom: 10px;
@@ -306,8 +308,12 @@ video {
 			padding-left: 20px;
 		}
 		.slick-dots {
-			bottom: -20px;
+			bottom: -30px;
 		}
+	}
+	.slick-prev,
+	.slick-next {
+		display: none;
 	}
 	footer {
 		.stats,
@@ -322,6 +328,12 @@ video {
 		}
 		img {
 			margin: 10px;
+		}
+	}
+	.stats {
+		flex-flow: column;
+		li {
+			margin-bottom: 20px;
 		}
 	}
 }
