--- a/css/styles.css
+++ b/css/styles.css
@@ -171,8 +171,10 @@ article {
     width: 100%; }
 
 .slideshow {
-  margin: 40px auto 0;
+  margin: 0 auto;
   width: 75%; }
+  .slideshow img {
+    margin-top: 0; }
   .slideshow .slick-dots {
     bottom: -15px; }
     .slideshow .slick-dots li {
