--- a/css/styles.css
+++ b/css/styles.css
@@ -284,6 +284,8 @@ video {
 @media only screen and (max-width: 767px) {
   h2 {
     padding: 20px 0 0; }
+  .ticker p {
+    font-size: 16px; }
   .hero .container {
     width: 85%; }
   .main section {
